# novadev

./: .gitignore  .markdownlint.json  CHANGELOG.md  COMMANDS.md  Makefile  PR_TEMPLATE.md  README.md  WEEK0_MASTER_PLAN.md  WEEK1_MASTER_PLAN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v1.1.md  WEEK1_KICKOFF.md
.github/ISSUE_TEMPLATE/: week_kickoff.md
.github/workflows/: docs-link-check.yml  python-ci.yml
common/: __init__.py  utils.py
crypto/: .env.example  API_GUIDE.md  README.md
crypto/api/: wallet_report.py
crypto/collector/: event_capture.py  rpc_health.py
crypto/db/: schema.sql
crypto/docs/w0_bootstrap/: 01_tahta_evm_giris.md  02_tahta_rpc_101.md  03_tahta_transfer_anatomi.md  04_tahta_getlogs_pencere_reorg.md  05_tahta_duckdb_idempotent.md  06_tahta_state_resume.md  07_tahta_rapor_json_schema.md  08_tahta_fastapi_mini.md  09_tahta_kalite_ci.md  10_tahta_troubleshoot_runbooks.md  README.md
crypto/features/: report_builder.py  report_validator.py
crypto/service/: __init__.py  app.py  cache.py  config.py  deps.py  models.py
crypto/service/routes/: __init__.py  (+2 more)
crypto/w0_bootstrap/: .env.example  README.md  capture_transfers.py  capture_transfers_idempotent.py  report_json.py  report_v0.py  rpc_health.py  validate_report.py
data/raw/: .gitkeep
docs/: AI_TRACK_OUTLINE.md  CRYPTO_TRACK_OUTLINE.md  crypto_overview.md  overview.md  program_overview.md
models/cache/: .gitkeep
schemas/: report_v1.json
tests/: __init__.py  conftest.py  test_linreg.py
tests/contract/: test_report_schema.py
tests/integration/: test_cache_integration.py
tests/unit/: test_cache.py
week0_setup/: README.md  hello_tensor.py  nova-setup.md  ollama_test.py  theory_advanced.md  theory_closure.md  theory_core_concepts.md  theory_foundations.md  theory_intro.md  theory_mathematical.md  theory_mathematical_part2.md
week1_tensors/: README.md  linreg_manual.py  linreg_module.py  train.py
week2_mlp/: README.md
week3_nlp/: README.md
week4_rag/: README.md
week5_agent/: README.md
week6_lora/: README.md
week7_service/: README.md
week8_capstone/: README.md
