[project]
name = "novadev-protocol"
version = "0.1.0"
description = "8-week AI learning journey: from tensors to production"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
nlp = [
    "transformers>=4.38.0",
    "datasets>=2.17.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.2.0",
]
rag = [
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.4.22",
    "langchain>=0.1.0",
]
service = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
]
lora = [
    "peft>=0.9.0",
    "bitsandbytes>=0.43.0",  # QLoRA için (M3'te çalışmayabilir)
    "accelerate>=0.27.0",
]
crypto = [
    "web3>=6.0.0",
    "requests>=2.31.0",
    "duckdb>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (matplotlib titles vs)
    "B008",  # function calls in argument defaults
]
per-file-ignores = {"__init__.py" = ["F401"], "tests/*.py" = ["B011"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    "*/week*/scratch_*.py",  # Deneme dosyaları
]
